made required items required on CheckOut. Updated dialog titles and icons for "view form/inspection". Updated text on MyFees to reflect fees from inspections Files modified - [MunicipalityCheckOut.html,MyFees.html,FindForm.html,MyCart.html]

--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -582,7 +582,7 @@
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
     <wm-view class="dialog-view" name="view2">
-        <wm-pagedialog name="pagedialogViewForm" class="modal-larger" content="_viewForm" modal="true">
+        <wm-pagedialog name="pagedialogViewForm" class="modal-larger" content="_viewForm" modal="true" title="View Form" oktext="Close" iconclass="wi wi-assignment">
             <wm-param name="FormGUID" value="bind:Variables.stvFormLink.dataSet.dataValue" type="string"></wm-param>
         </wm-pagedialog>
     </wm-view>
