--- a/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
+++ b/src/main/webapp/pages/MunicipalityCheckOut/MunicipalityCheckOut.html
@@ -33,7 +33,7 @@
                                 <wm-gridrow name="gridrow7" padding=".2em unset">
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn13"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn10">
-                                        <wm-composite name="compositePaymentNumber" show="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check')||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card')">
+                                        <wm-composite name="compositePaymentNumber" show="bind:(Widgets.radiosetPaymentOptions.datavalue=='Check')||(Widgets.radiosetPaymentOptions.datavalue=='Offline Credit Card')" required="true">
                                             <wm-label class="col-md-3 form-control-static" name="labelPaymentNumber" caption="bind:Widgets.radiosetPaymentOptions.datavalue=='Check'?'Check Number':'Transaction ID'" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container2">
                                                 <wm-text name="textPaymentNumber"></wm-text>
@@ -45,7 +45,7 @@
                                 <wm-gridrow name="gridrow8">
                                     <wm-gridcolumn columnwidth="1" name="gridcolumn14_1"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn12">
-                                        <wm-composite name="compositeComments">
+                                        <wm-composite name="compositeComments" required="true">
                                             <wm-label class="col-md-3 form-control-static" name="labelComments" caption="Comments" fontweight="bold"></wm-label>
                                             <wm-container class="col-md-9" name="container3">
                                                 <wm-textarea name="textareaComments" placeholder="Place Your Comments"></wm-textarea>
