removed placeholder text and made "Scope" required on "Code Set Details" dialog Files modified - [EditInspection.html]

--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -468,7 +468,7 @@
                                                         <wm-gridrow name="gridrow54_1">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn73_2">
                                                                 <wm-form-field name="formCodeSetScope" displayname="Scope" widget="select" show="true" type="custom" dataset="bind:Variables.stvCodeSetScope.dataSet" datafield="dataValue" displayfield="dataValue"
-                                                                defaultvalue="bind:Variables.stvCodeSetScope.dataSet[0].dataValue" on-change="formCodeSetScopeChange($event, $scope, newVal, oldVal)" key="formCodeSetScope" placeholder="Select value"></wm-form-field>
+                                                                defaultvalue="bind:Variables.stvCodeSetScope.dataSet[0].dataValue" on-change="formCodeSetScopeChange($event, $scope, newVal, oldVal)" key="formCodeSetScope" placeholder="" required="true"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow51_2">
