- Violations work and table/column name normalization New files added - [Code.java,CodeService.java,CodeServiceImpl.java,CodeDao.java,CodeController.java] Files modified - [_viewInspection.js,cx2_published_dataModel.json,CodeSetsController.java,_viewInspection.html,EditInspection.html,ViolationsServiceImpl.java,_viewInspection.variables.json,LetterTemplatesServiceImpl.java,ViolationsController.java,CodeSetsService.java,UsersController.java,UsersService.java,Users.java,CodesToForm.java,LetterTemplatesController.java,CodeSetsServiceImpl.java,pom.xml,CodeSets.java,Violations.java,EditInspection.variables.json,UsersServiceImpl.java,db-connection-settings.json,CodesToInspection.java,LetterTemplates.java] Removed files - [CodeListController.java,CodeList.java,CodeListServiceImpl.java,CodeListDao.java,CodeListService.java]

--- a/src/main/webapp/pages/EditInspection/EditInspection.html
+++ b/src/main/webapp/pages/EditInspection/EditInspection.html
@@ -444,6 +444,9 @@
                             </wm-tabpane>
                             <wm-tabpane name="tabpane7" title="Violations" show="bind:Widgets.lfUpdateInspectionDesign.formWidgets.trackViolations.datavalue">
                                 <wm-layoutgrid name="layoutgrid18_1">
+                                    <wm-gridrow name="gridrow55_1">
+                                        <wm-gridcolumn columnwidth="12" name="gridcolumn79_1"></wm-gridcolumn>
+                                    </wm-gridrow>
                                     <wm-gridrow name="gridrow53">
                                         <wm-gridcolumn columnwidth="12" name="gridcolumn74">
                                             <wm-label padding="unset 0.5em" name="label14" caption="In order to cite specific code violations on this inspection, you need to select &quot;global&quot; (State-level) or municipality-specific code sets."></wm-label>
