--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -333,7 +333,7 @@
                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                     <wm-grid-action key="addNewRow" display-name="Request Inspection" show="bind:Variables.CurrentForm.firstRecord.formStatuses.allowInspections||Variables.svUserPermissions.dataSet.isEmployee||Variables.svUserPermissions.dataSet.isAdmin"
-                                                    class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()" shortcutkey="" disabled=""></wm-grid-action>
+                                                    class="btn-primary" iconclass="wi wi-plus" title="Request Inspection" action="Widgets.dialogInspectionRequest.open()" shortcutkey="" disabled="false"></wm-grid-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.svUserPermissions.dataSet.isEmployee || Variables.svUserPermissions.dataSet.isAdmin" class="btn-transparent"
                                                     iconclass="wi wi-trash" title="Delete" action="Variables.lvDeleteFormsToInspections.deleteRecord()" disabled="false"></wm-grid-row-action>
                                                     <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="viewInspection" action="Widgets.dialogViewInspection.open()"
@@ -1057,6 +1057,11 @@
                         <wm-label padding="unset 0.5em" name="label119" caption="There are too many inspections schedule for this day. Please choose another." class="text-danger" show="bind:tooManyInspectionsForDay"></wm-label>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow99_1">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn183_1">
+                        <wm-label padding="unset 0.5em" name="label119_1" caption="Fees must be paid before requesting this type of inspection." class="text-danger" show="bind:(Variables.CurrentForm.dataSet.data[$i].balanceDue | stringToNumber) > 0 &amp;&amp; inspectionObject.requireFeesPaidBeforeScheduling"></wm-label>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow89">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn165">
                         <wm-composite name="composite9">
@@ -1067,7 +1072,7 @@
                 </wm-gridrow>
             </wm-layoutgrid>
             <wm-dialogactions name="dialogactions10">
-                <wm-button class="btn-primary" caption="Request Inspection" type="button" margin="unset 0.5em" name="button2InspectionRequest" on-click="button2InspectionRequestClick($event, $scope)" iconclass="wi wi-plus" show="true" disabled="bind:!inspectionObject || (inspectionObject.scheduleDateAndTime ? !Widgets.datetimeInspectionRequest.datavalue : !Widgets.dateInspectionRequest.datavalue) || (isSameDayRequest() &amp;&amp; inspectionObject.sameDayInspectionFee > 0 &amp;&amp; !Widgets.checkboxSameDayFeeConfirm.datavalue) || tooManyInspectionsForHour || tooManyInspectionsForDay"></wm-button>
+                <wm-button class="btn-primary" caption="Request Inspection" type="button" margin="unset 0.5em" name="button2InspectionRequest" on-click="button2InspectionRequestClick($event, $scope)" iconclass="wi wi-plus" show="true" disabled="bind:!canAddInspection()"></wm-button>
                 <wm-button class="btn-secondary" caption="Cancel" on-click="closeDialog()" name="button21" iconclass="wi wi-cancel"></wm-button>
             </wm-dialogactions>
         </wm-dialog>
