--- a/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
+++ b/src/main/webapp/pages/EditGISRecord/EditGISRecord.html
@@ -260,17 +260,23 @@
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn columnwidth="6" name="gridcolumn60">
                                                     <wm-form-field name="landValue" displayname="Land Value" show="true" primary-key="false" generator="assigned" key="landValue" type="big_decimal" readonly="false" required="false" step="0.01" widget="currency"
-                                                    inputtype="number" placeholder="Enter value" minvalue="0"></wm-form-field>
+                                                    placeholder="Enter value" minvalue="0"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow30">
                                                 <wm-gridcolumn columnwidth="6" name="gridcolumn62">
                                                     <wm-form-field name="buildingValue" displayname="Building Value" show="true" primary-key="false" generator="assigned" key="buildingValue" type="big_decimal" readonly="false" required="false" step="0.01"
-                                                    widget="currency" inputtype="number" placeholder="Enter value" minvalue="0"></wm-form-field>
+                                                    widget="currency" placeholder="Enter value" minvalue="0"></wm-form-field>
                                                 </wm-gridcolumn>
                                                 <wm-gridcolumn name="gridcolumn1" columnwidth="6">
                                                     <wm-form-field name="saleAmount" displayname="Sale Amount" show="true" primary-key="false" generator="assigned" key="saleAmount" type="string" readonly="false" required="true" widget="currency" maxchars="255"
-                                                    inputtype="text" placeholder="Enter value" minvalue="0" step="0.01"></wm-form-field>
+                                                    placeholder="Enter value" minvalue="0" step="0.01"></wm-form-field>
+                                                </wm-gridcolumn>
+                                            </wm-gridrow>
+                                            <wm-gridrow name="gridrow1">
+                                                <wm-gridcolumn name="gridcolumn1" columnwidth="6">
+                                                    <wm-form-field name="gisrecords" displayname="Gisrecords" show="false" primary-key="false" generator="assigned" key="gisrecords" type="list" is-related="true" readonly="false" required="true" widget="select"
+                                                    dataset="bind:Variables.SelectedGISobj.dataSet" datafield="All Fields" displayfield="lot" defaultvalue="bind:Variables.SelectedGISobj.firstRecord"></wm-form-field>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                         </wm-layoutgrid>
