--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -537,7 +537,7 @@
                                     <wm-gridrow padding=".5em unset" name="gridrow20">
                                         <wm-gridcolumn columnwidth="3" name="gridcolumn59"></wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="6" horizontalalign="right" name="gridcolumn60">
-                                            <wm-button class="btn-primary" caption="Search" type="button" on-click="Variables.FliteredMasterFormsAdvancedSearch.listRecords()" name="buttonSearchAdvanced" iconclass="wi wi-search" disabled="bind:Widgets.selectFormTypesForAdvanced.datavalue == null"></wm-button>
+                                            <wm-button class="btn-primary" caption="Search" type="button" on-click="Variables.svSearchAllFormsByFormTitle.invoke()" name="buttonSearchAdvanced" iconclass="wi wi-search" disabled="bind:Widgets.selectFormTypesForAdvanced.datavalue == null"></wm-button>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn columnwidth="3" name="gridcolumn61"></wm-gridcolumn>
                                     </wm-gridrow>
@@ -557,20 +557,23 @@
                                                     </wm-gridrow>
                                                     <wm-gridrow name="gridrow4">
                                                         <wm-gridcolumn columnwidth="12" name="gridcolumn5">
-                                                            <wm-grid title="" dataset="bind:Variables.FliteredMasterFormsAdvancedSearch.dataSet" navigation="Classic" filtermode="multicolumn" nodatamessage="No Forms Found" loadingdatamsg="Searching" exportformat="EXCEL"
-                                                            name="gridAdvanced" showrecordcount="true">
-                                                                <wm-grid-column binding="formTitle" caption="Form Title" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true"></wm-grid-column>
-                                                                <wm-grid-column binding="users.email" caption="Created By" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="Users"></wm-grid-column>
-                                                                <wm-grid-column binding="municipalities.municipalityName" caption="Municipality" type="string" primary-key="false" generator="assigned" readonly="true" edit-widget-type="text"
-                                                                show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Standard'" related-entity-name="Municipalities"></wm-grid-column>
-                                                                <wm-grid-column binding="formTypes.formType" caption="Form" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormTypes"></wm-grid-column>
-                                                                <wm-grid-column binding="formStatuses.status" caption="Form Status" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="true" related-entity-name="FormStatuses"></wm-grid-column>
-                                                                <wm-grid-column binding="vendor.companyName" caption="Primary Contractor" type="string" generator="assigned" readonly="true" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Standard'"
-                                                                related-entity-name="Vendor"></wm-grid-column>
-                                                                <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" primary-key="false" generator="assigned" edit-widget-type="text" show="true" filterwidget="number"
-                                                                readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
+                                                            <wm-grid title="" dataset="bind:Variables.svSearchAllFormsByFormTitle.dataSet" navigation="Classic" name="gridAdvanced" filtermode="multicolumn" showrecordcount="true" nodatamessage="No Forms Found"
+                                                            loadingdatamsg="Searching">
+                                                                <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="createdBy" caption="Created By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="municipalityName" caption="Municipality" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Standard'"
+                                                                readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="formDesign" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="formStatus" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="subdivision" caption="Subdivision" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Homebuilder'"
+                                                                readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="lot" caption="Lot" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Homebuilder'" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="address" caption="Address" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="primaryVendor" caption="Primary Contractor" type="string" edit-widget-type="text" show="bind:Widgets.selectViewAdvanced.datavalue.viewName==='Standard'"
+                                                                readonly="false"></wm-grid-column>
+                                                                <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" edit-widget-type="text" show="true" filterwidget="number" readonly="false"><span>{{(!row.getProperty('balanceDue') ? 0 : row.getProperty('balanceDue')) | toCurrency:'$':2}}</span>
                                                                 </wm-grid-column>
-                                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                                 <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
                                                             </wm-grid>
                                                         </wm-gridcolumn>
