CodeSet and Code changes according to changes made in DB Files modified - [MunicipalityCodeSets,CXCodeSets,CXCodeList,MunicipalityCodeList,cx2,app.variables.json]

--- a/src/main/webapp/pages/CXCodeList/CXCodeList.html
+++ b/src/main/webapp/pages/CXCodeList/CXCodeList.html
@@ -3,7 +3,7 @@
     <wm-top-nav content="topnav" name="top_nav1"></wm-top-nav>
     <wm-content name="content1">
         <wm-left-panel columnwidth="2" content="leftnav" name="left_panel1"></wm-left-panel>
-        <wm-page-content columnwidth="10" name="page_content1">
+        <wm-page-content columnwidth="10" name="page_content1" accessroles="CXAdmin">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow13_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn13_1">
